# opentab

./: .gitignore  bun.lockb  components.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: Button.svelte  CommandPallete.svelte  Drawer.svelte  Header.svelte  ModeToggle.svelte  PlaybackSpeed.svelte  Player.svelte  PlayerControls.svelte  Range.svelte  TrackControls.svelte  Zoom.svelte  logger.svelte.ts  opentab.svelte.ts  player.ts
src/lib/ui/command/: command-dialog.svelte
src/lib/ui/select/: index.ts
src/lib/ui/toggle-group/: index.ts  toggle-group-item.svelte  toggle-group.svelte
src/routes/: +layout.svelte  +page.svelte
static/soundfont/: distorted.sf2
